1. Some Fix